@@ -2,7 +2,6 @@
 ^README\.developer$
 ^README\.release$
 \.PPI$
-^lib/Perl/Critic/PolicySummary.pod$
 _without_optional_dependencies.t$
 ^t/ControlStructures/ProhibitNegativeExpressionsInUnlessAndUntilConditions.run$
 ^t/NamingConventions/Capitalization.run$
