@@ -23,6 +23,12 @@
       constant" declared multiple constants.  Reported by Kevin Ryde,
       RT #44987.
 
+    Other Changes:
+    * The PolicySummary.pod file is now generated when the distribution
+      is created, rather than when you install it.  This ensures the file
+      will be available on http://search.cpan.org.  Thanks to Bear Longyear
+      for brigning this to our attention.
+
 [1.105] Released on 2009-09-07
 
     Bug Fixes:
